objects/CA_Amministratore__c.object
<CustomObject>
    <fields>
        <fullName>CA_Albo_Amministratore__c</fullName>
        <label>Albo Amministratore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Citt__c</fullName>
        <label>Città</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Codice_Fiscale__c</fullName>
        <label>Codice Fiscale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Email_Amministratore__c</fullName>
        <label>Email Amministratore</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>CA External ID</label>
        <length>110</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CA_ID_Building_Scala__c</fullName>
        <label>ID_Building/Scala</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Indirizzo_Amministratore__c</fullName>
        <label>Indirizzo Amministratore</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Nome_Amministratore__c</fullName>
        <label>Nome Amministratore</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_P_IVA__c</fullName>
        <label>P.IVA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Telefono_Amministratore__c</fullName>
        <label>Telefono Amministratore</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Amministratore</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CA_Nome_Amministratore__c</columns>
        <columns>CA_Email_Amministratore__c</columns>
        <columns>CA_Telefono_Amministratore__c</columns>
        <columns>CA_Indirizzo_Amministratore__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cognome Amministratore</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amministratori</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CA_update_no_amministratore</fullName>
        <active>true</active>
        <description>Controllo sull&apos;aggiornamento dell&apos;amministratore NO_AMMINISTRATORE
Può essere aggiornato solo da amministratori del sistema.</description>
        <errorConditionFormula>AND(
or(
 ISCHANGED(CA_Citt__c), 
 ISCHANGED(CA_Codice_Fiscale__c),  
 ISCHANGED(Name),
 ISCHANGED(CA_External_ID__c),
 ISCHANGED(CA_Email_Amministratore__c),
 ISCHANGED( CA_Indirizzo_Amministratore__c),
 ISCHANGED( CA_Nome_Amministratore__c ), 
 ISCHANGED(CA_P_IVA__c), 
 ISCHANGED( CA_Telefono_Amministratore__c ),
 ISCHANGED(  CA_Albo_Amministratore__c )
), (CA_External_ID__c=&apos;NO_AMMINISTRATORE&apos;)
)</errorConditionFormula>
        <errorMessage>Attenzione!
Non è possibile modificare i dati anagrafici dell&apos;amministratore  &quot;NO_AMMINISTRATORE&quot;.
E&apos; necessario aggiungere un nuovo amministratore.</errorMessage>
    </validationRules>
</CustomObject>